<resources>
    <string name="app_name">InsightCart</string>
    <string name="title_menu_1">Kurikulum Standar Industri Global</string>
    <string name="title_menu_2">Belajar Fleksibel Sesuai Jadwal Anda</string>
    <string name="title_menu_3">Code Review dari Developer Expert</string>
    <string name="title_menu_4">Alumni Terpercaya di Berbagai Perusahaan</string>
    <string name="desc_menu_1">Kurikulum dikembangkan bersama perusahaan dan pemilik teknologi dunia sesuai kebutuhan industri terkini.</string>
    <string name="desc_menu_2">Belajar kapan pun, di mana pun, secara mandiri. Bebas memilih kelas sesuai minat belajar. Akses seumur hidup ke kelas dan forum diskusi setelah lulus.</string>
    <string name="desc_menu_3">Validasi skill Anda melalui 1-on-1 Professional Code Review yang diberikan langsung oleh Developer Expert.</string>
    <string name="desc_menu_4">Sertifikat yang membuktikan pengetahuan fundamental beserta keterampilan nyata yang diinginkan perusahaan global.</string>
    <string name="Next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_login">Sign In</string>
    <string name="tab_signup">Sign Up</string>
    <string name="close">close\n</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="SigninwithEmail">Sign in with Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="SignUpwithEmail">Sign Up with Email</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="profile">Profile</string>
    <string name="back">Arrow</string>
    <string name="Account">syarifdayat119@gmail.com</string>
    <string name="photo">photo\n</string>
    <string name="user">Username</string>
    <string name="emaildummy">Email</string>
    <string name="usernamedummy">Syarif Hidayat</string>
    <string name="logout">Logout</string>
    <!-- Inventory menagement placeholder string-->
    <string name="Menu1">Kopikap</string>
    <string name="Harga1">Rp.20.000</string>
    <string name="delete">Delete</string>
    <string name="image_profile">Image Profile</string>
    <string name="menu">Menu</string>
    <string name="search_button">Search Button</string>
    <string name="harga">Harga</string>
    <string name="home_button">Home</string>
    <string name="inventory_icon">Inventory</string>
    <string name="inventory_logo">Inventory_Icon</string>
    <string name="home_icon">home_icon\n</string>
    <string name="cashier">Cashier</string>
    <string name="logo_menu_cashier">logo_menu_kasir</string>
    <string name="analysys_icon">analysys_icon</string>
    <string name="analysis">Analysis</string>
    <string name="add_button">add_button\n</string>
    <string name="delete_button">delete_button\n</string>
    <string name="Transaction">Transaction</string>
    <string name="Records">Records</string>
    <string name="Receipt">Receipt</string>
    <string name="MenuName">Menu Name</string>
    <string name="Searchyourmenu">Search your menu</string>
    <string name="input_menu">Input Menu</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="field_menu">Field Nama Menu\n</string>
    <string name="field_menu_1">Masukkan Nama Menu</string>
    <string name="ingridient">Ingridient</string>
    <string name="berat">Satuan (ml/g)</string>
    <string name="field_menu_2">Bahan dari Menu</string>
    <string name="harga_menu">Harga Menu</string>
    <string name="field_menu_3">Masukkan Harga Menu</string>
    <string name="Satuan_description">Satuan Harga dari menu</string>
    <string name="add_rectangle_button">add_rectangle_button</string>
    <string name="input_action">Input</string>
    <string name="edit_menu">Edit Menu\n</string>
    <string name="edit_ingridient">Edit Ingridients</string>
    <string name="edit_harga_menu">Edit Harga Menu</string>
    <string name="nama_barang">nama barang</string>
    <string name="field_menu1">Masukkan Nama Menu</string>
    <string name="jumlah_barang">jumlah barang</string>
    <string name="input_update_stock">input update stock</string>
    <string name="menu_title">Menu</string>
    <string name="item">Item</string>
    <string name="inventory">Inventory\n</string>
    <string name="your_web_client_id">your web clinet id</string>
</resources>