<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/WhiteGrey"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:background="@color/WhiteGrey"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="759dp">

        <!-- Home Icon -->
        <ImageButton
            android:contentDescription="@string/home_icon"
            android:id="@+id/home"
            android:layout_width="69dp"
            android:layout_height="76dp"
            android:background="null"
            app:srcCompat="@drawable/home"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="27dp" />

        <TextView
            android:id="@+id/Home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_button"
            android:textColor="@color/navi"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="84dp" />

        <!-- Inventory Icon -->

        <TextView
            android:id="@+id/Inventory_Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_icon"
            android:textColor="@color/navi"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="84dp" />

        <ImageButton
            android:contentDescription="@string/inventory_logo"
            android:id="@+id/inventory_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="null"
            app:srcCompat="@drawable/inventory"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="34dp" />

        <!-- Cashier Icon -->

        <ImageButton
            android:contentDescription="@string/logo_menu_cashier"
            android:id="@+id/cashier_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="null"
            app:srcCompat="@drawable/cashier"
            tools:layout_editor_absoluteX="242dp"
            tools:layout_editor_absoluteY="35dp" />

        <TextView
            android:id="@+id/cashier_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cashier"
            android:textColor="@color/navi"
            tools:layout_editor_absoluteX="246dp"
            tools:layout_editor_absoluteY="84dp" />

        <!-- Analysis Icon -->

        <ImageButton
            android:id="@+id/analysys_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="null"
            android:contentDescription="@string/analysys_icon"
            app:srcCompat="@drawable/analysys"
            tools:layout_editor_absoluteX="341dp"
            tools:layout_editor_absoluteY="35dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analysis"
            android:textColor="@color/navi"
            tools:layout_editor_absoluteX="340dp"
            tools:layout_editor_absoluteY="84dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>